DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
2004-01-27 patrickh Updated to require an installed build of Boost 1.31.0.
                    Boost.Filesystem is no longer compiled into VPR.
                    NEW VERSION: 0.33.0
2004-01-15 allenb   Refactored MutexPosix to use an error checking mutex on
                    Linux when compiled debug.
                    NEW VERSION: 0.32.5
2004-01-15 allenb   Fixed bug in CondVarPosix::wait() where wait time was not
                    being taken into account correctly.  This method also now
                    returns timeouts correctly.
                    NEW VERSION: 0.32.4
2004-01-10 allenb   Changed Mutex::test() method to be const.
                    NEW VERSION: 0.32.3
2003-11-12 patrickh Removed the vpr::GUID(const char*) constructor overload.
                    NEW VERSION: 0.32.2
2003-11-05 patrickh Fixed a bug that prevented the termios abstraction from
                    opening ports in non-blocking mode.
                    NEW VERSION: 0.32.1
2003-11-04 patrickh Eliminated the I/O-related methods setOpenBlocking() and
                    setOpenNonBlocking() in favor of just using setBlocking().
                    NEW VERSION: 0.32.0
2003-11-03 allenb   Renamed serial port interface methods *BufferSize() to
                    *MinInputSize() to better reflect their use.
                    NEW VERSION: 0.31.0
2003-10-28 patrickh Refactored the various I/O interfaces to reduce the number
                    of methods.
                    NEW VERSION: 0.30.0
2003-10-27 allenb   Extended serial port interface.  There is now support
                    for getting/setting various terminal lines.
                    NEW VERSION: 0.29.0
2003-09-23 allenb   Added RWMutexPoix.  This just wraps the standard posix
                    rwmutex methods.
                    NEW VERSION: 0.28.1